Closed
Bug 847099
Opened 12 years ago
Closed 12 years ago
Intermittent test_readonly_lockedfiles.html | Assertion count {2,4} is greater than expected range (Didn't find the locked file we were looking for!: 'mLockedFileQueues.Length()...) followed by a timeout in test_add_put.html et al (bug 783913)
Categories
(Core :: Storage: IndexedDB, defect)
Core
Storage: IndexedDB
Tracking
()
RESOLVED
FIXED
mozilla22
People
(Reporter: RyanVM, Assigned: janv)
References
Details
(Keywords: assertion, intermittent-failure)
Attachments
(1 file)
|
1.06 KB,
patch
|
bent.mozilla
:
review+
|
Details | Diff | Splinter Review |
Yay, another intermittent failure in the IndexedDB test suite. I don't suppose it's asking too much for these to be fixed one of these days?
https://tbpl.mozilla.org/php/getParsedLog.php?id=20260072&tree=Mozilla-Inbound
Rev4 MacOSX Lion 10.7 mozilla-inbound debug test mochitest-2 on 2013-03-02 11:20:25 PST for push 18c3ffc28f4a
slave: talos-r4-lion-026
11:30:46 INFO - 3865 INFO TEST-START | /tests/dom/file/test/test_readonly_lockedfiles.html
11:30:46 INFO - ++DOMWINDOW == 63 (0x153a9b3b8) [serial = 2023] [outer = 0x11d205858]
11:30:46 INFO - 3866 INFO TEST-PASS | /tests/dom/file/test/test_readonly_lockedfiles.html | Correct mode
11:30:46 INFO - 3867 INFO TEST-PASS | /tests/dom/file/test/test_readonly_lockedfiles.html | Writing to a readonly locked file failed
11:30:46 INFO - 3868 INFO TEST-PASS | /tests/dom/file/test/test_readonly_lockedfiles.html | Appending to a readonly locked file failed
11:30:46 INFO - 3869 INFO TEST-PASS | /tests/dom/file/test/test_readonly_lockedfiles.html | Truncating a readonly locked file failed
11:30:46 INFO - 3870 INFO TEST-PASS | /tests/dom/file/test/test_readonly_lockedfiles.html | Flushing a readonly locked file failed
11:30:46 INFO - [Parent 464] ###!!! ASSERTION: Didn't find the locked file we were looking for!: 'mLockedFileQueues.Length() == lockedFileCount - 1', file ../../../dom/file/FileService.cpp, line 467
11:30:46 INFO - mozilla::dom::file::FileService::NotifyLockedFileCompleted(mozilla::dom::file::LockedFile*) [obj-firefox/dist/include/nsTArray.h:277]
11:30:46 INFO - mozilla::dom::file::FinishHelper::Run() [obj-firefox/dist/include/nsCOMPtr.h:520]
11:30:46 INFO - nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:627]
11:30:46 INFO - NS_ProcessPendingEvents_P(nsIThread*, unsigned int) [obj-firefox/xpcom/build/nsThreadUtils.cpp:188]
11:30:46 INFO - nsBaseAppShell::NativeEventCallback() [widget/xpwidgets/nsBaseAppShell.cpp:98]
11:30:46 INFO - nsAppShell::ProcessGeckoEvents(void*) [widget/cocoa/nsAppShell.mm:388]
11:30:46 INFO - CoreFoundation + 0x12b51
11:30:46 INFO - CoreFoundation + 0x123bd
11:30:46 INFO - CoreFoundation + 0x391a9
11:30:46 INFO - CoreFoundation + 0x38ae6
11:30:46 INFO - HIToolbox + 0x23d3
11:30:46 INFO - HIToolbox + 0x958f
11:30:46 INFO - HIToolbox + 0x94ca
11:30:46 INFO - AppKit + 0x93f1
11:30:46 INFO - -AppKit + 0x8cf5
11:30:46 INFO - -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [widget/cocoa/nsAppShell.mm:164]
11:30:46 INFO - nsAppShell::ProcessNextNativeEvent(bool) [widget/cocoa/nsAppShell.mm:667]
11:30:46 INFO - nsBaseAppShell::OnProcessNextEvent(nsIThreadInternal*, bool, unsigned int) [widget/xpwidgets/nsBaseAppShell.cpp:139]
11:30:46 INFO - _ZThn8_N10nsAppShell18OnProcessNextEventEP17nsIThreadInternalbj [widget/cocoa/nsAppShell.mm:831]
11:30:46 INFO - nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:602]
11:30:46 INFO - NS_ProcessPendingEvents_P(nsIThread*, unsigned int) [obj-firefox/xpcom/build/nsThreadUtils.cpp:188]
11:30:46 INFO - nsBaseAppShell::NativeEventCallback() [widget/xpwidgets/nsBaseAppShell.cpp:98]
11:30:46 INFO - nsAppShell::ProcessGeckoEvents(void*) [widget/cocoa/nsAppShell.mm:388]
11:30:46 INFO - CoreFoundation + 0x12b51
11:30:46 INFO - CoreFoundation + 0x123bd
11:30:46 INFO - CoreFoundation + 0x391a9
11:30:46 INFO - CoreFoundation + 0x38ae6
11:30:46 INFO - HIToolbox + 0x23d3
11:30:46 INFO - HIToolbox + 0x963d
11:30:46 INFO - HIToolbox + 0x94ca
11:30:46 INFO - AppKit + 0x93f1
11:30:46 INFO - -AppKit + 0x8cf5
11:30:46 INFO - -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [widget/cocoa/nsAppShell.mm:164]
11:30:46 INFO - -AppKit + 0x562d
11:30:46 INFO - nsAppShell::Run() [widget/cocoa/nsAppShell.mm:741]
11:30:46 INFO - nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:288]
11:30:46 INFO - XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:3885]
11:30:46 INFO - XREMain::XRE_main(int, char**, nsXREAppData const*) [toolkit/xre/nsAppRunner.cpp:3952]
11:30:46 INFO - XRE_main [toolkit/xre/nsAppRunner.cpp:4155]
11:30:46 INFO - main [browser/app/nsBrowserApp.cpp:224]
11:30:46 INFO - [Parent 464] ###!!! ASSERTION: Didn't find the locked file we were looking for!: 'mLockedFileQueues.Length() == lockedFileCount - 1', file ../../../dom/file/FileService.cpp, line 467
11:30:46 INFO - mozilla::dom::file::FileService::NotifyLockedFileCompleted(mozilla::dom::file::LockedFile*) [obj-firefox/dist/include/nsTArray.h:277]
11:30:46 INFO - mozilla::dom::file::FinishHelper::Run() [obj-firefox/dist/include/nsCOMPtr.h:520]
11:30:46 INFO - nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:627]
11:30:46 INFO - NS_ProcessPendingEvents_P(nsIThread*, unsigned int) [obj-firefox/xpcom/build/nsThreadUtils.cpp:188]
11:30:46 INFO - nsBaseAppShell::NativeEventCallback() [widget/xpwidgets/nsBaseAppShell.cpp:98]
11:30:46 INFO - nsAppShell::ProcessGeckoEvents(void*) [widget/cocoa/nsAppShell.mm:388]
11:30:46 INFO - CoreFoundation + 0x12b51
11:30:46 INFO - CoreFoundation + 0x123bd
11:30:46 INFO - CoreFoundation + 0x391a9
11:30:46 INFO - CoreFoundation + 0x38ae6
11:30:46 INFO - HIToolbox + 0x23d3
11:30:46 INFO - HIToolbox + 0x958f
11:30:46 INFO - HIToolbox + 0x94ca
11:30:46 INFO - AppKit + 0x93f1
11:30:46 INFO - -AppKit + 0x8cf5
11:30:46 INFO - -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [widget/cocoa/nsAppShell.mm:164]
11:30:46 INFO - nsAppShell::ProcessNextNativeEvent(bool) [widget/cocoa/nsAppShell.mm:667]
11:30:46 INFO - nsBaseAppShell::OnProcessNextEvent(nsIThreadInternal*, bool, unsigned int) [widget/xpwidgets/nsBaseAppShell.cpp:139]
11:30:46 INFO - _ZThn8_N10nsAppShell18OnProcessNextEventEP17nsIThreadInternalbj [widget/cocoa/nsAppShell.mm:831]
11:30:46 INFO - nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:602]
11:30:46 INFO - NS_ProcessPendingEvents_P(nsIThread*, unsigned int) [obj-firefox/xpcom/build/nsThreadUtils.cpp:188]
11:30:46 INFO - nsBaseAppShell::NativeEventCallback() [widget/xpwidgets/nsBaseAppShell.cpp:98]
11:30:46 INFO - nsAppShell::ProcessGeckoEvents(void*) [widget/cocoa/nsAppShell.mm:388]
11:30:46 INFO - CoreFoundation + 0x12b51
11:30:46 INFO - CoreFoundation + 0x123bd
11:30:46 INFO - CoreFoundation + 0x391a9
11:30:46 INFO - CoreFoundation + 0x38ae6
11:30:46 INFO - HIToolbox + 0x23d3
11:30:46 INFO - HIToolbox + 0x963d
11:30:46 INFO - HIToolbox + 0x94ca
11:30:46 INFO - AppKit + 0x93f1
11:30:46 INFO - -AppKit + 0x8cf5
11:30:46 INFO - -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [widget/cocoa/nsAppShell.mm:164]
11:30:46 INFO - -AppKit + 0x562d
11:30:46 INFO - nsAppShell::Run() [widget/cocoa/nsAppShell.mm:741]
11:30:46 INFO - nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:288]
11:30:46 INFO - XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:3885]
11:30:46 INFO - XREMain::XRE_main(int, char**, nsXREAppData const*) [toolkit/xre/nsAppRunner.cpp:3952]
11:30:46 INFO - XRE_main [toolkit/xre/nsAppRunner.cpp:4155]
11:30:46 INFO - main [browser/app/nsBrowserApp.cpp:224]
11:30:46 INFO - 3871 INFO TEST-END | /tests/dom/file/test/test_readonly_lockedfiles.html | finished in 215ms
11:30:46 INFO - ++DOMWINDOW == 64 (0x154caab78) [serial = 2024] [outer = 0x11d205858]
11:30:46 INFO - 3872 ERROR TEST-UNEXPECTED-FAIL | /tests/dom/file/test/test_readonly_lockedfiles.html | Assertion count 2 is greater than expected range 0-0 assertions.
11:53:54 INFO - 17101 ERROR TEST-UNEXPECTED-FAIL | /tests/dom/indexedDB/test/test_add_put.html | Test timed out.
11:59:24 INFO - 17104 ERROR TEST-UNEXPECTED-FAIL | /tests/dom/indexedDB/test/test_add_twice_failure.html | Test timed out.
12:04:54 INFO - 17107 ERROR TEST-UNEXPECTED-FAIL | /tests/dom/indexedDB/test/test_advance.html | Test timed out.
12:10:24 INFO - 17110 ERROR TEST-UNEXPECTED-FAIL | /tests/dom/indexedDB/test/test_app_isolation_inproc.html | Test timed out.
| Reporter | ||
Comment 1•12 years ago
|
||
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 7•12 years ago
|
||
Looks to be permaorange on Win8, too.
OS: Mac OS X → All
Hardware: x86_64 → All
Jan, any ideas here?
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Assignee | ||
Comment 50•12 years ago
|
||
Assignee: nobody → Jan.Varga
Status: NEW → ASSIGNED
Attachment #725900 -
Flags: review?(bent.mozilla)
| Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment on attachment 725900 [details] [diff] [review]
fix
Review of attachment 725900 [details] [diff] [review]:
-----------------------------------------------------------------
Nice! Thanks for finding this.
Attachment #725900 -
Flags: review?(bent.mozilla) → review+
| Assignee | ||
Comment 53•12 years ago
|
||
Comment 54•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Assignee | ||
Comment 56•12 years ago
|
||
I guess the Build-System tree doesn't contain the fix yet.
Comment 57•12 years ago
|
||
I don't exactly star it in a prompt manner - that failed run started 45 minutes before the patch even hit mozilla-central (and yay for tbpl caching, didn't show this bug as being fixed, since it wasn't at the time tbpl first looked at the log).
You need to log in
before you can comment on or make changes to this bug.
Description
•