Bug 847099 - Intermittent test_readonly_lockedfiles.html | Assertion count {2,4} is greater than expected range (Didn't find the locked file we were looking for!: 'mLockedFileQueues.Length()...) followed by a timeout in test_add_put.html et al (bug 783913). r=bent